--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-DATABASE_URI="mongodb://127.0.0.1:27017/ecommercedb"
+DATABASE_URI="mongodb+srv://takimoh08:NPHXvuIO92joD8Yx@cluster0.ejfsji0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET=kfkuhfkhhfukyf
 NODE_ENV=development
